--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "react": "^16.8.4",
+    "react-redux": "^7.0.0",
+    "redux": "^4.0.0",
+    "redux-form": "^8.2.6",
     "sendgrid": "^5.2.3",
     "stripe": "^8.0.1"
   }
